components/search/search.css
#page-search {
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    align-items: center;
    background-color: rgb(200, 200, 200);
    max-height: 5.5vh;
}

.search-form-container {
    display: flex;
    justify-content: center; /* Centra orizzontalmente */
    margin-top: 50px;
}

.search-form {
    display: flex;
}

.search-form input[type="text"] {
    padding: 10px;
    font-size: 16px;
    border: 1px solid #ccc;
    border-radius: 5px 0 0 5px;
    outline: none;
}

.search-form input[type="button"] {
    padding: 10px 20px;
    font-size: 16px;
    background-color: #007bff;
    color: #fff;
    border: none;
    border-radius: 0 5px 5px 0;
    cursor: pointer;
}

.search-form input[type="button"]:hover {
    background-color: #0056b3;
}

.search-form input[type="text"]:focus {
    border-color:#007bff;
}

